# MeetingKit

./: README.md  com.Surya99941.github.com.json  meson.build
Include/: attendance-window.h
data/: com.Surya99941.github.com.appdata.xml.in  com.Surya99941.github.com.desktop.in  com.Surya99941.github.com.gschema.xml  meson.build
data/Uis/: Meetings.glade  Meetings.glade~  Organizer.glade  Organizer.glade~  attendance.gresource.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: Meetings.glade~  Organizer.glade~  attendance-window.cpp  attendance-window.ui~  main.cpp  meson.build
uis/: Full demo.glade  Full demo.glade~
